--- a/app/views/avaliacao_notificacaos/_form.html.erb
+++ b/app/views/avaliacao_notificacaos/_form.html.erb
@@ -16,35 +16,36 @@
 
 
     <%= f.select :classificacao_operacional, @classificacoes_operacionais, {prompt: true} %>
-    <%= f.label :classificacao_operacional %>
+    <%= f.label :classificacao_operacional, "Classificação Operacional" %>
   </div>
 
   <div class="row">
-    <div class="input-field col s6">
+    <div class="input col s6">
 
       <%= f.label :inicio_pqt, "Início PQT" %>
-      <%= f.text_field :inicio_pqt, class:"datepicker" %>
+      <%= f.date_field :inicio_pqt %>
+
 
     </div>
 
-    <div class="input-field col s6">
+    <div class="input col s6">
 
       <%= f.label :alta_pqt, "Alta PQT" %>
-      <%= f.text_field :alta_pqt, class:"datepicker"  %>
+      <%= f.date_field :alta_pqt  %>
 
     </div>
   </div>
 
   <div class="input-field">
 
-    <%= f.label :profissao %>
+    <%= f.label :profissao, "Profissão" %>
     <%= f.text_field :profissao %>
     
   </div>
 
   <div class="input-field">
 
-    <%= f.label :unidade_saude %>
+    <%= f.label :unidade_saude, "Unidade de Saúde" %>
     <%= f.text_field :unidade_saude %>
     
   </div>
@@ -56,7 +57,7 @@
 
 
       <%= f.check_box :atividades_orientadas %>
-      <%= f.label :atividades_orientadas %>
+      <%= f.label :atividades_orientadas, "Atividades Orientadas" %>
 
     </div>
     <div class="input-field col s4">
@@ -81,7 +82,7 @@
   <br>
   <div class="row input-field">
 
-    <%= f.label :encaminhamentos %>
+    <%= f.label :encaminhamentos, "Encaminhamentos" %>
     <%= f.text_field :encaminhamentos %>
     
   </div>
@@ -112,11 +113,13 @@
 
 
   <%= f.hidden_field :notificacao_id %>
+  <%= f.hidden_field :paciente_id %>
+  <%= f.hidden_field :inicial %>
 
   <!-- Episodio Reacional -->
 
-  <div class="card">
-    <div class="card-content">
+  <div class="card" style="overflow: visible;">
+    <div class="card-content" style="overflow: visible;">
       <span class="card-title">Avaliação Neurológica Simplificada</span>
       <%= f.fields_for :avaliacao_neurologicas do |esq| %>
           <div class="row">
