--- a/app/views/notificacaos/_form.html.erb
+++ b/app/views/notificacaos/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 <div class="card-panel">
   <%= f.hidden_field :paciente_id %>
+  <%= f.hidden_field :recidiva_id %>
   <div class="row">
     <div class="col s12 l6 input-field">
 
