--- a/app/views/notificacaos/show.html.erb
+++ b/app/views/notificacaos/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <%= link_to 'Nova Avaliação', new_avaliacao_notificacao_path(notificacao: @notificacao.id), class:"btn" %>
-<%= link_to 'Ficha de Suspeita de Recidiva', recidiva_notificacao_path(@notificacao), class:"btn" %>
+<%#= link_to 'Ficha de Suspeita de Recidiva', recidiva_notificacao_path(@notificacao), class:"btn" %>
 
 <div class="card-panel">
 	<div class="row">
