--- a/app/views/ocupacaos/_form.html.erb
+++ b/app/views/ocupacaos/_form.html.erb
@@ -19,6 +19,13 @@
     
   </div>
 
+  <div class="input-field">
+
+    <%= f.label :codigo %>
+    <%= f.text_field :codigo %>
+
+  </div>
+
 </div>
   <div class="actions">
     <%= f.submit "Salvar", class:"btn" %>
