--- a/app/views/pacientes/_form.html.erb
+++ b/app/views/pacientes/_form.html.erb
@@ -52,7 +52,7 @@
 
   </div>
   <br>
-  <% if current_user.administrador? %>
+  <% if current_user.administrador? || current_user.referencia?%>
   <div class="input">
     <%= f.label :cidade_id, "Cidade" %>
     <%= f.select :cidade_id, @cidades,{ prompt: true},{class:"browser-default chosen-select"}  %>
