--- a/app/views/avaliacao_notificacaos/edit.html.erb
+++ b/app/views/avaliacao_notificacaos/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Ficha de Avaliação Neurológica Simplificada</h4>
 </div>
 
 <%= render 'form', avaliacao_notificacao: @avaliacao_notificacao %>
