--- a/app/views/cidades/new.html.erb
+++ b/app/views/cidades/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Cadastro</h4>
+	<h4>Cadastro de Cidade</h4>
 </div>
 
 <%= render 'form', cidade: @cidade %>
