--- a/app/views/recidivas/edit.html.erb
+++ b/app/views/recidivas/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Ficha de Investigação de Suspeita de Recidiva</h4>
 </div>
 
 <%= render 'form', recidiva: @recidiva %>
