--- a/app/views/avaliacao_notificacaos/show.html.erb
+++ b/app/views/avaliacao_notificacaos/show.html.erb
@@ -91,7 +91,7 @@
   <div class="row">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">Classificação do Grau</span>
+        <span class="card-title">Classificação do Grau de Incapacidade</span>
         <%= render partial: "classificacao_grau", locals:{classificacao_graus: @avaliacao_notificacao.classificacao_graus} %>
       </div>
 
