--- a/app/views/cidades/edit.html.erb
+++ b/app/views/cidades/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Formulário de Edição - Cidade</h4>
 </div>
 
 <%= render 'form', cidade: @cidade %>
