--- a/app/views/dermatologicas/new.html.erb
+++ b/app/views/dermatologicas/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Cadastro</h4>
+	<h4>Formulário de Cadastro - Sinais Dermatológicos</h4>
 </div>
 
 <%= render 'form', dermatologica: @dermatologica %>
