--- a/app/views/medicamentos/edit.html.erb
+++ b/app/views/medicamentos/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Formulário de Edição - Medicamentos</h4>
 </div>
 
 <%= render 'form', medicamento: @medicamento %>
