--- a/app/views/medicamentos/new.html.erb
+++ b/app/views/medicamentos/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Cadastro</h4>
+	<h4>Formulário de Cadastro - Medicamentos</h4>
 </div>
 
 <%= render 'form', medicamento: @medicamento %>
