--- a/app/views/pacientes/edit.html.erb
+++ b/app/views/pacientes/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Formulário de Edição - Pacientes</h4>
 </div>
 
 <%= render 'form', paciente: @paciente %>
