--- a/app/views/notificacaos/index.html.erb
+++ b/app/views/notificacaos/index.html.erb
@@ -1,4 +1,7 @@
 <div class="card">
+  <h1 class="center-align">Notificações</h1>
+</div>
+<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
