--- a/app/views/ocupacaos/index.html.erb
+++ b/app/views/ocupacaos/index.html.erb
@@ -1,11 +1,15 @@
 <div class="card">
+  <h1 class="center-align">Ocupações</h1>
+</div>
+
+<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
-          <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
+          <%= f.text_field :nome_cont, placeholder: "Pesquisar..." %>
           <%= f.submit "Filtrar", class:"btn" %>
       <% end %>
     </div>
@@ -26,6 +30,7 @@
 
         <td><%= link_to ocupacao.nome,ocupacao %></td>
         <td><%= ocupacao.codigo %></td>
+        <td><%= link_to 'Excluir', ocupacao, method: :delete, data: { confirm: 'Deseja realmente excluir?' } %></td>
 
       </tr>
   <% end %>
