--- a/app/views/medicamentos/index.html.erb
+++ b/app/views/medicamentos/index.html.erb
@@ -1,11 +1,14 @@
-<div class="card">  
+<div class="card">
+  <h1 class="center-align">Medicamentos</h1>
+</div>
+<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
-      <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
+      <%= f.text_field :nome_cont, placeholder: "Pesquisar..." %>
       <%= f.submit "Filtrar", class:"btn" %>
       <% end %>
     </div>
@@ -24,7 +27,7 @@
     <tr>
               
           <td><%= link_to medicamento.nome,medicamento %></td>
-        
+      <td><%= link_to 'Excluir', medicamento, method: :delete, data: { confirm: 'Deseja realmente excluir?' } %></td>
           </tr>
     <% end %>
   </tbody>
