--- a/app/views/pacientes/mapa.html.erb
+++ b/app/views/pacientes/mapa.html.erb
@@ -1,3 +1,7 @@
+<div class="card">
+  <h1 class="center-align">Mapa dos Pacientes</h1>
+</div>
+<div class="card-panel">
 <div class="row">
   <div class="input">
     <label for="cidade">Cidade</label>
@@ -7,6 +11,7 @@
 <br>
 <div class="row">
   <div id="map" style="width: 100%;height: 500px"></div>
+</div>
 </div>
 <script>
 
