--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,14 @@
-<div class="card">  
+<div class="card">
+  <h1 class="center-align">Usuários</h1>
+</div>
+<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
-      <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
+      <%= f.text_field :nome_cont, placeholder: "Pesquisar..." %>
       <%= f.submit "Filtrar", class:"btn" %>
       <% end %>
     </div>
@@ -54,4 +57,4 @@
   <%= paginate(@users)  %>
 </div>
 
-<%= link_to '+ Cadastrar', new_user_path, class:"btn" %>
+<%#= link_to '+ Cadastrar', new_user_path, class:"btn" %>
