--- a/app/views/avaliacao_notificacaos/show.html.erb
+++ b/app/views/avaliacao_notificacaos/show.html.erb
@@ -1,6 +1,6 @@
 
 <% if @avaliacao_notificacao.inicial %>
-    <%= link_to 'Mova Notificação', new_notificacao_path(paciente: @avaliacao_notificacao.paciente), class:"btn" %>
+    <%= link_to 'Nova Notificação', new_notificacao_path(paciente: @avaliacao_notificacao.paciente), class:"btn" %>
 <% end %>
 <div class="card-panel">
 
