--- a/app/views/monofilamentos/index.html.erb
+++ b/app/views/monofilamentos/index.html.erb
@@ -34,4 +34,4 @@
   <%= paginate(@monofilamentos)  %>
 </div>
 
-<%= link_to '+ Cadastrar', new_monofilamento_path, class:"btn" %>
+<%#= link_to '+ Cadastrar', new_monofilamento_path, class:"btn" %>
